24/07/07:
  - initial commit of the new renderer moduel (render_full, "GPAC Full Renderer"), which is a merge of both 2D and 3D renderer
  with support for offscreen OpenGL, when available. Offscreen rendering is still experimental and only works under Windows at the current time. 
  This is a temporary version, the goal is to replace all renderer modules by this single renderer integrated in libgpac.
  
31/05/07: GPAC 0.4.4
  - Added support for XMLHttpRequest for both VRML/MPEG-4 and SVG. All methods should be supported, but only GET/HEAD have been tested
  - Added a basic subset of DOM Core for xml doc (XMLHttpRequest, SVG) and moved the uDOM implementation in it.
  - Added support for SVG focus & navigation in 2D renderer
  - new SVG scene graph implementation with much lower memory usage 
  - Updated LASeR to new SVG implementation and fixed many bugs in codec 
      current LASeR binary version should now be in sync with the latest spec (IS+COR, AMD still to be done)
  - Added support for some LASeR tools:
      - conditional
      - clipBegin/clipEnd and syncReference on audio/video elements
      - WARNING: 
          * other LASeR (non-SVG) v1 elements and all v2 elements are NOT supported
          * LASeR save/restore and sendEvents are NOT supported
          * SAF handling is likely not conformant yet          
  - Moved default SVG implementation to dynamic attribute allocation
  - ALSA output module
  - DVB support for Linux - connection URL is dvb://ChannelName, cf doc/configuration.html
  - Moved ISMA decryption to run-time module for basic DRM tests
  - Added support for NAT Keep Alive (RTP streaming only)
  - Two new test apps:
      mp4_streamer: RTP unicaster/mulitcaster
      mp42ts: MPEG-2 TS sample gateway, can output to file or to RTP. Supports ISO file and SDPs (RTP only, no RTSP) as input.
  - Changed default behavior in MP4Box when adding AAC-SBR with explicit signaling: full SBR Samplerate is now used in media track.